--- a/src/footer/styles.scss
+++ b/src/footer/styles.scss
@@ -10,7 +10,15 @@
     bottom: -8px;
     transform: rotate(-1.5deg);
     z-index: -1;
-    background: #1B5E20;
+    background-color: #56378e;
+  }
+}
+
+@media (min-width: 650px) {
+  #global-footer {
+    .bg-shape {
+      transform: rotate(-1deg);
+    }
   }
 }
 
@@ -26,6 +34,7 @@
         text-decoration: none;
         padding: 0 12px;
         padding-bottom: 8px;
+        color: #fafafa;
         border-bottom: 2px solid rgba(250, 250, 250, 0.5);
         border-radius: 2px;
       }
