--- a/src/frontpage/styles.scss
+++ b/src/frontpage/styles.scss
@@ -42,6 +42,14 @@
   font-family: 'Share Tech Mono', monospace;
 }
 
+$gallery-item-max-width: 800px;
+
+@media (min-width: $gallery-item-max-width) {
+  .item-container{
+    background: rgba(20, 20, 20, 0.5);
+  }
+}
+
 #gallery {
   position: relative;
   overflow: hidden;
@@ -59,30 +67,46 @@
     transform: rotate(1.5deg);
   }
 
+  /* Gallery item caption */
+  .item-caption{
+    margin: 8px 0 24px 0;
+    font-weight: 300;
+    color: rgba(250, 250, 250, 0.85);
+    font-size: 18px;
+    padding: 0 24px;
+  }
+
   /* Gallery item */
   .item {
     width: 100%;
+    max-width: $gallery-item-max-width;
     background-attachment: fixed;
     background-repeat: no-repeat;
+  }
+}
 
-    /* Gallery item caption */
-    & + .caption {
-      margin: 8px 0 24px 0;
-      font-weight: 300;
-      color: rgba(250, 250, 250, 0.85);
-      font-size: 18px;
+@media (min-width: 880px) {
+  #gallery {
+    .bg-shape {
+      transform: rotate(1deg);
     }
   }
 }
 
+$video-max-width: 1024px;
+
 #video-container {
-  width: 100vw;
-  height: calc(100vw * (9 / 16));
   display: inline-block;
+  width: 100%;
+  text-align: center;
+  background: rgba(20, 20, 20, 0.15);
 
   >* {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    max-width: $video-max-width;
+
+    height: calc(100vw * (9 / 16));
+    max-height: $video-max-width * (9 / 16);
   }
 }
 
@@ -111,5 +135,35 @@
     position: relative;
     top: 10px;
     margin-right: 8px;
+  }
+}
+
+/* Hidden in mobile */
+#facebook-feed {
+  display: none;
+}
+
+/* Medium size devices. Should show facebook feed. */
+@media (min-width: 768px) {
+  #hero {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: 'header header' 'left right';
+  }
+
+  #hero-header {
+    grid-area: header;
+  }
+
+  #left-side {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  #facebook-feed {
+    grid-row: 2;
+    grid-column: 2;
+    display: initial;
   }
 }
