--- a/src/header/styles.scss
+++ b/src/header/styles.scss
@@ -33,6 +33,14 @@ $color: #2E7D32;
         text-decoration: none;
       }
 
+      a {
+        transition: color 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
+
+        &:hover {
+          color: rgba(250, 250, 250, 0.75);
+        }
+      }
+
       .selected-effect {
         display: none;
       }
