--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-width: 360px;
   font-family: sans-serif;
   color: #424242;
   background: #fafafa;
@@ -46,36 +47,25 @@ h1 {
 /* Task indicator */
 @keyframes task-indicator {
   0% {
-    -webkit-transform: translate(-50%, -50%) rotate(0deg);
-    transform: translate(-50%, -50%) rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: translate(-50%, -50%) rotate(360deg);
-    transform: translate(-50%, -50%) rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 $task-indicator-size: 24px;
 
 .task-indicator {
-  width: 36px !important;
-  height: 36px !important;
-  transform: translate(-18px, -18px) scale(0.18) translate(18px, 18px);
-  div:after {
-    transform: rotate(90deg);
-  }
-  div {
-    animation: task-indicator 1s linear infinite;
-    top: 100px;
-    left: 100px;
-  }
-  div,
-  div:after {
-    position: absolute;
-    width: 176px;
-    height: 176px;
-    border: 8px solid #3b5998;
-    border-top-color: transparent;
-    border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  animation: task-indicator 1s linear 0s infinite;
+  background: url(./assets/spinner.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: inline-block;
+
+  &.blue {
+    background-image: url(./assets/spinner_blue.png);
   }
 }
